chore(streams): add more stream methods